# lineman

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  config.toml  fourmolu.yaml  hie.yaml  justfile  lineman.cabal  lineman.dhall  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
src/: App.hs  Concurrent.hs  Config.hs  Cook.hs  Cooker.hs  Lineman.hs  Log.hs  Parser.hs  Types.hs
src/Type/: Domain.hs  Raw.hs
test/: Spec.hs
