cabal-version:   3.0
name:            lineman
version:         1.0.0
synopsis:        traverse directory and run command
description:
  Lineman traverses directory recursively and run command by condition
  See [README.md](https://github.com/metaxis/lineman#lineman) for more details.

homepage:        https://github.com/metaxis/lineman
bug-reports:     https://github.com/metaxis/lineman/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Vladislav Sabanov
maintainer:      Vladislav Sabanov <willgame@mail.ru>
copyright:       2022 Vladislav Sabanov
category:        Utility
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.4.8

source-repository head
  type:     git
  location: https://github.com/metaxis/lineman.git

common common-options
  build-depends:      base ^>=4.17.2.1
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    App
    Config
    Cook
    Lineman
    Types

  build-depends:
    , co-log
    , co-log-core
    , containers
    , dhall
    , directory
    , extra
    , filepath
    , lifted-async
    , monad-control
    , mtl
    , path
    , path-io
    , pretty-simple
    , process
    , safe-exceptions
    , text
    , transformers-base

executable lineman
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  lineman
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite lineman-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  lineman
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
